--- a/RaddioButton1/app/src/main/res/values/strings.xml
+++ b/RaddioButton1/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">RaddioButton1</string>
     <string name="male">男生</string>
     <string name="female">女生</string>
-    <string name="regularticket">全票</string>
-    <string name="childticket">兒童票</string>
-    <string name="studentticket">學生票</string>
+    <string name="regularticket">全票\n(NTD 500)</string>
+    <string name="childticket">兒童票\n(NTD 250)</string>
+    <string name="studentticket">學生票\n(NTD 400)</string>
 </resources>
